--- a/galeria.html
+++ b/galeria.html
@@ -45,7 +45,7 @@ DOCTYPE: Document Type Declaration-->
             <li class="invisible"><A href="#"> desktop </A></li>
             <li class="invisible"><A href="#"> smart_tv </A></li>
 <!-- <button></button> -->
-            <li><A href="inicio.html"> Inicio </A></li>
+            <li><A href="index.html"> Inicio </A></li>
             <li><A href="galeria.html"> galeria </A></li>
             <li><A href="historias.html"> histórias </A></li>
             <li><A href="fanarts.html"> fanarts </A></li>
