--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ DOCTYPE: Document Type Declaration-->
     -->
     <title>portifólio_jack_</title>
 
-    <link rel="shortcut icon" href="./assets/inicio_icon.png" type:"image/x-icon">
+    <link rel="shortcut icon" href="./assets/favicon.png" type:"image/x-icon">
     <link rel="stylesheet" href="./assets/css/styleinicio.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0">
