--- a/portifolio.html
+++ b/portifolio.html
@@ -4,6 +4,7 @@ DOCTYPE: Document Type Declaration-->
 <html lang="pt-br">
 <!--"html": Hiper Text Marked Language ou linguagem de marcação de hipertexto, é a tag raiz do documento-->
 
+
 <head>
     <!--organizar metadados
     sempre acima do body-->
@@ -14,13 +15,13 @@ DOCTYPE: Document Type Declaration-->
     <!--name= viewport”: ; “content”: ; “width=device-width” indica que a largura da página deve ser igual a largura; 
      “initial-scale=1.0” indica que a página deve ser exibida com uma esc
     -->
+    <title>portifólio_jack_</title>
 
-    <script src="./assets/js/script.index.js"> </script>
 
-    <title>Apresentação Pessoal</title>
+    <script src="./assets/js/script.portifolio.js"> </script>
 
-    <link rel="shortcut icon" href="./assets/favicon.png" type:"image/x-icon">
-    <link rel="stylesheet" href="./assets/css/style.index.css">
+    <link rel="shortcut icon" href="./assets/galeria.icon.png" type:"image/x-icon">
+    <link rel="stylesheet" href="./assets/css/style.portifolio.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0">
     <!-- link para o css do menu mobile; link para o css do google fonts -->
@@ -29,10 +30,11 @@ DOCTYPE: Document Type Declaration-->
 <body onresize="mudouTamanho()">
     <header>
         <!--A Tag H1 serve para definir o texto como titulo-->
-        <h1>Quem sou?</h1>
+        <h1>Portifólio Jack</h1>
     </header>
     <!-- Usando o google icons o menu é criado, junto com uma função usado no
       javascript para exibir o menu burger no evento de onclik-->
+
     <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">
         menu
     </span>
@@ -41,16 +43,18 @@ DOCTYPE: Document Type Declaration-->
 
     <menu id="itens">
         <ul>
-            <!-- <li class="invisible"><A href="#"> mobile </A></li>
+            <!--
+            <li class="invisible"><A href="#"> mobile </A></li>
             <li class="invisible"><A href="#"> tablet </A></li>
             <li class="invisible"><A href="#"> desktop </A></li>
             <li class="invisible"><A href="#"> smart_tv </A></li> -->
-
+            <!-- <button></button> -->
             <li><A href="index.html"> Inicio - Apresentação</A></li>
             <li><A href="portifolio.html"> Portifólio </A></li>
             <li><A href="experiencias.habilidades.html"> Experiências e habilidades </A></li>
             <li><A href="contatos.html"> Contatos </A></li>
         </ul>
+
     </menu>
 
     <!-- Todas as imagens são oculta pelo atributo none, e a cada mudança de resolução
@@ -59,64 +63,63 @@ DOCTYPE: Document Type Declaration-->
         <!--<section>
             <div>
                 <img src="/assents/foto_banguela.png" alt="foto-de-um-gato-preto-olhando-a grama" width="30%"
-                    height="30%" </div>
-        </section>-->
-
-        <!-- <img src="./assets/icon-phone.png" alt="teste com celular" id="mobile">
-        <img src="./assets/icon-tablet.png" alt="teste com celular" id="tablet">
-        <img src="./assets/icon-print.png" alt="versão impressora" id="print">
-        <img src="./assets/icon-pc.png" alt="teste com desktop" id="pc">
-        <img src="./assets/icon-tv.png" alt="teste com smart tv" id="tv"> -->
-
+                    height="30%" </div>-->
         <!-- Dentro  do main foi criado um div com um id para ser usado no Medias Queries
          e dentro dele foi criado um div com um id para ser usado no Medias Queries
          onde a estrutura article será redimencionada para cada visualização de tela-->
 
-        <article>
-            <!-- <strong></strong> negrito -->
-                <!-- <em></em> itálico -->
-                <!-- <u></u> sublinhado -->
-                <!-- <s></s> tachado -->
+        <div class="jackzin">
+            <img src="./assets/jack_IA.png" alt="imagem representando o Jack, gerada por IA">
 
-                    <h2>
-                        Jack Chernake
-                    </h2>
-                    <p><strong>Quem sou eu?</strong></p>
-                    <p>
-                        -Meu nome é Jack Valentine Chernake, tenho 16 anos e atualmente curso o 3°EM. Já tive diversos trabalhos informais, como vender minha arte em trabalhos de muralismo e vender Funkos Pop! em uma
-                        feira de variedades no shopping, hoje em dia ajudo meu pai na organização de torneios de vôlei que
-                        ele mesmo organiza, então sei lidar até com as pessoas mais insistentes, sou direto, organizado e
-                        costumo ser o líder em atividades em grupo.
-                    </p>
-            <h3>Hoobies </h3>
-            <!--A Tag p serve para definir um paragrafo no texto
-    Aqui podemos continuar escrevendo-->
-            <!--<aside></aside>-->
+            <article>
+                <h2>
+                    Jack Chernake
+                </h2>
+
+        </div>
+        <!-- 
+         <article>
+            <h2>
+             Quem é o Banguela?
+            </h2>
             <p>
-                Ler,
-                confeccionar acessórios,
-                desenhar, estudar,
-                ouvir música,
-                dar sachê pro banguela(meu gato)
+                dfgzdfgrgxdfg
             </p>
-            <h4>
-                Habilidades
-            </h4>
-            <p>
-                Sou sempre a liderança em trabalhos escolares, sou dedicado, metódico e na maioria das vezes busco o
-                jeito mais interessante e menos prático
+        </article> -->
+
+        <article>
+            <h3>
+                Galeria Banguela
+            </h3>
+            <p class="paragrafo1">
+                Nosso gatinho ja passou por muitas fases...
             </p>
-            <h5>
-                asdfghjk
-            </h5>
         </article>
+
+        <img src="./assets/banguela/banguela1.png" alt="banguela na janela" class="banguela">
+        <img src="./assets/banguela/banguela2.png" alt="banguela deitado no chão" class="banguela">
+        <img src="./assets/banguela/banguela3.png" alt="banguela jogado no sofá" class="banguela">
+        <img src="./assets/banguela/banguela4.png" alt="banguela deitado em cima da mesa" class="banguela">
+        <img src="./assets/banguela/banguela5.png" alt="banguela com as garras para fora" class="banguela">
+        <img src="./assets/banguela/banguela6.png" alt="banguela deitado no Jack" class="banguela">
+        <img src="./assets/banguela/banguela7.png" alt="banguela deitado na caixa" class="banguela">
+        <img src="./assets/banguela/banguela8.png" alt="banguela deitado na coberta" class="banguela">
+        <img src="./assets/banguela/banguela9.png" alt="banguela deitado em cima do seu tapetinho" class="banguela">
+        <img src="./assets/banguela/banguela10.png" alt="banguela bocejando" class="banguela">
+        <img src="./assets/banguela/banguela11.png" alt="banguela dormindo gostoso" class="banguela">
+        <img src="./assets/banguela/banguela12.png" alt="banguela deitado em cima do braço do Jack" class="banguela">
+        <img src="./assets/banguela/banguela13.png" alt="banguela deitado em cima da cama" class="banguela">
+        <img src="./assets/banguela/banguela14.png" alt="banguela dormindo gostoso 2" class="banguela">
+
     </main>
 
     <footer>
-        <p>Feito por Jack 2024 </p>
+        <p> Feito por Jack 2024 </p>
     </footer>
 
     </main>
+
 </body>
 <!--problemas encontrados: código não fechado, letras maiusculas, id não condizendo com o css-->
+
 </html>
