--- a/experiencias.habilidades.html
+++ b/experiencias.habilidades.html
@@ -34,7 +34,30 @@
 
     <main>
         <article>
-            <h2>Funko Pop </h2>
+
+            <h2>Qualidades</h2>
+            <p>Responsável</p>
+            <p>Pontual</p>
+            <p>Organizado</p>
+            <p>Direto</p>
+
+
+
+            <h2>Hard Skills</h2>
+            <p><strong>Cursos:</strong></p>
+            <p>PPT -  Vocação - 2024 - 140 horas</p>
+            <p>Mentoria - Vocação - 2024 - 60 horas</p>
+            <p>Mesa das Profissões - Porto</p>
+            
+
+            <h2>Relatos</h2>
+            <p><strong>Feira de Funko pop!</strong></p>
+            <p>asdfghjkl</p>
+            <p><strong>Muralismo</strong></p>
+            <p>asdfghjkl</p>
+            <p><strong>Design</strong></p>
+            <p>asdfghjkl</p>
+
         </article>
     </main>
 
