--- a/contatos.html
+++ b/contatos.html
@@ -8,8 +8,8 @@
 
     <script src="./assets/js/script.contatos.js"> </script>
 
-    <link rel="shortcut icon" href="/assets/fanarts.icon.png" type:"image/x-icon">
-    <link rel="stylesheet" href="/assets/css/style.contatos.css">
+    <link rel="shortcut icon" href="./assets/fanarts.icon.png" type:"image/x-icon">
+    <link rel="stylesheet" href="./assets/css/style.contatos.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0">
 </head>
@@ -34,9 +34,28 @@
     </menu>
 
     <main>
-        <button id="meuBotao">instagram</button>
-        <button id="meuBotao">linkedin</button>
-        <button id="meuBotao">Whatsapp</button>
+        <button id="Botao">
+            <a href="https://www.instagram.com/_.layspaivaa/">
+                <img src="./assets/icon.instagram.png" alt="icone insta">
+               <strong>Instagram</strong> 
+            </a>
+        </button>
+
+
+        <button id="Botao2">
+            <a href="https://www.linkedin.com/company/vocacao.oficial/posts/?feedView=all">
+                <img src="./assets/icon.linkedin.png" alt="icone linkedin">
+                <strong>Linkedin</strong>
+            </a>
+        </button>
+
+
+        <button id="Botao3">
+            <a href="https://chat.whatsapp.com/KiuHrglunjnLxoPT2F4sZv">
+                <img src="./assets/icon.whatsapp.png" alt="icone wtt">
+                <strong>Whatsapp</strong>
+            </a>
+        </button>
 
     </main>
 
