--- a/experiencias.habilidades.html
+++ b/experiencias.habilidades.html
@@ -19,13 +19,14 @@
     <header>
         <h1>Experiências e habilidades</h1>
     </header>
+
     <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">
         menu
     </span>
 
     <menu id="itens">
         <ul>
-            <li><A href="index.html"> Inicio -  Apresentação </A></li>
+            <li><A href="index.html"> Inicio - Apresentação </A></li>
             <li><A href="portifolio.html"> Portifólio </A></li>
             <li><A href="experiencias.habilidades.html"> Experiências e habilidades </A></li>
             <li><A href="contatos.html"> Contatos </A></li>
@@ -34,29 +35,33 @@
 
     <main>
         <article>
-
             <h2>Qualidades</h2>
-            <p>Responsável</p>
-            <p>Pontual</p>
-            <p>Organizado</p>
-            <p>Direto</p>
-
-
+            <p>- Responsável</p>
+            <p>- Pontual</p>
+            <p>- Organizado</p>
+            <p>- Direto</p>
 
             <h2>Hard Skills</h2>
             <p><strong>Cursos:</strong></p>
-            <p>PPT -  Vocação - 2024 - 140 horas</p>
+            <p>PPT - Vocação - 2024 - 140 horas</p>
             <p>Mentoria - Vocação - 2024 - 60 horas</p>
-            <p>Mesa das Profissões - Porto</p>
-            
+            <p>Mesa das Profissões - Porto - 2024</p>
+            <p>Mesa das Profissões - Riot Games - 2024 - 3 horas </p>
+            <p>Mesa das Profissões - Alura - 2024 - 3 horas</p>
 
             <h2>Relatos</h2>
+            
             <p><strong>Feira de Funko pop!</strong></p>
             <p>asdfghjkl</p>
+
             <p><strong>Muralismo</strong></p>
             <p>asdfghjkl</p>
+
             <p><strong>Design</strong></p>
             <p>asdfghjkl</p>
+
+
+
 
         </article>
     </main>
