--- a/portifolio.html
+++ b/portifolio.html
@@ -36,41 +36,60 @@
     </menu>
 
     <main>
-        <div class="jackzin">
-            <img src="./assets/jack_IA.png" alt="imagem representando o Jack, gerada por IA">
+        <article id="conteudo">
 
-            <article>
+            <div class="jackzin">
+                <img src="./assets/jack_IA.png" alt="imagem representando o Jack, gerada por IA">
+            </div>
+
+
+            <!-- Alterar o alinhar o texto para o centro da imagem-->
+            <div id="part01">
+
+
                 <h2>
                     Jack Chernake
                 </h2>
-        </div>
 
-        <article>
+            </div>
+
+  
+
+
+
+
+        </article>
+        
+        <article id="galeria">
+
             <h3>
                 Galeria Banguela
             </h3>
             <p class="paragrafo1">
                 Nosso gatinho ja passou por muitas fases...
             </p>
+
+
+            <img src="./assets/banguela/banguela1.png" alt="banguela na janela" class="banguela">
+            <img src="./assets/banguela/banguela2.png" alt="banguela deitado no chão" class="banguela">
+            <img src="./assets/banguela/banguela3.png" alt="banguela jogado no sofá" class="banguela">
+            <img src="./assets/banguela/banguela4.png" alt="banguela deitado em cima da mesa" class="banguela">
+            <img src="./assets/banguela/banguela5.png" alt="banguela com as garras para fora" class="banguela">
+            <img src="./assets/banguela/banguela6.png" alt="banguela deitado no Jack" class="banguela">
+            <img src="./assets/banguela/banguela7.png" alt="banguela deitado na caixa" class="banguela">
+            <img src="./assets/banguela/banguela8.png" alt="banguela deitado na coberta" class="banguela">
+            <img src="./assets/banguela/banguela9.png" alt="banguela deitado em cima do seu tapetinho" class="banguela">
+            <img src="./assets/banguela/banguela10.png" alt="banguela bocejando" class="banguela">
+            <img src="./assets/banguela/banguela11.png" alt="banguela dormindo gostoso" class="banguela">
+            <img src="./assets/banguela/banguela12.png" alt="banguela deitado em cima do braço do Jack"
+                class="banguela">
+            <img src="./assets/banguela/banguela13.png" alt="banguela deitado em cima da cama" class="banguela">
+            <img src="./assets/banguela/banguela14.png" alt="banguela dormindo gostoso 2" class="banguela">
+
         </article>
 
-        <img src="./assets/banguela/banguela1.png" alt="banguela na janela" class="banguela">
-        <img src="./assets/banguela/banguela2.png" alt="banguela deitado no chão" class="banguela">
-        <img src="./assets/banguela/banguela3.png" alt="banguela jogado no sofá" class="banguela">
-        <img src="./assets/banguela/banguela4.png" alt="banguela deitado em cima da mesa" class="banguela">
-        <img src="./assets/banguela/banguela5.png" alt="banguela com as garras para fora" class="banguela">
-        <img src="./assets/banguela/banguela6.png" alt="banguela deitado no Jack" class="banguela">
-        <img src="./assets/banguela/banguela7.png" alt="banguela deitado na caixa" class="banguela">
-        <img src="./assets/banguela/banguela8.png" alt="banguela deitado na coberta" class="banguela">
-        <img src="./assets/banguela/banguela9.png" alt="banguela deitado em cima do seu tapetinho" class="banguela">
-        <img src="./assets/banguela/banguela10.png" alt="banguela bocejando" class="banguela">
-        <img src="./assets/banguela/banguela11.png" alt="banguela dormindo gostoso" class="banguela">
-        <img src="./assets/banguela/banguela12.png" alt="banguela deitado em cima do braço do Jack" class="banguela">
-        <img src="./assets/banguela/banguela13.png" alt="banguela deitado em cima da cama" class="banguela">
-        <img src="./assets/banguela/banguela14.png" alt="banguela dormindo gostoso 2" class="banguela">
-
     </main>
-    
+
     <footer>
         <p> Feito por Jack 2024 </p>
     </footer>
