--- a/contatos.html
+++ b/contatos.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contatos</title>
 
-    <script src="./assets/js/script.contatos.js"> </script>
+    <script src="../assets/js/script.contatos.js"> </script>
 
-    <link rel="shortcut icon" href="./assets/fanarts.icon.png" type:"image/x-icon">
-    <link rel="stylesheet" href="./assets/css/style.contatos.css">
+    <link rel="shortcut icon" href="../assets/fanarts.icon.png" type:"image/x-icon">
+    <link rel="stylesheet" href="../assets/css/style.contatos.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0">
 </head>
@@ -35,21 +35,21 @@
     <main>
         <button id="Botao">
             <a href="https://www.instagram.com/_.layspaivaa/">
-                <img src="./assets/icon.instagram.png" alt="icone insta">
+                <img src="../assets/icon.instagram.png" alt="icone insta">
                <strong>Instagram</strong> 
             </a>
         </button>
 
         <button id="Botao2">
             <a href="https://www.linkedin.com/company/vocacao.oficial/posts/?feedView=all">
-                <img src="./assets/icon.linkedin.png" alt="icone linkedin">
+                <img src="../assets/icon.linkedin.png" alt="icone linkedin">
                 <strong>Linkedin</strong>
             </a>
         </button>
 
         <button id="Botao3">
             <a href="https://chat.whatsapp.com/KiuHrglunjnLxoPT2F4sZv">
-                <img src="./assets/icon.whatsapp.png" alt="icone wtt">
+                <img src="../assets/icon.whatsapp.png" alt="icone wtt">
                 <strong>Whatsapp</strong>
             </a>
         </button>
