--- a/experiencias.habilidades.html
+++ b/experiencias.habilidades.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Experiencias e habilidades</title>
 
-    <script src="./assets/js/script.experiencias.habilidades.js"> </script>
+    <script src="../assets/js/script.experiencias.habilidades.js"> </script>
 
-    <link rel="shortcut icon" href="./assets/historias.icon.png" type:"image/x-icon">
-    <link rel="stylesheet" href="./assets/css/style.experiencias.habilidades.css">
+    <link rel="shortcut icon" href="../assets/historias.icon.png" type:"image/x-icon">
+    <link rel="stylesheet" href="../assets/css/style.experiencias.habilidades.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0">
     <!-- link para o css do menu mobile; link para o css do google fonts -->
