--- a/portifolio.html
+++ b/portifolio.html
@@ -7,10 +7,10 @@
 
     <title>portifólio_jack_</title>
 
-    <script src="../assets/js/script.portifolio.js"> </script>
+    <script src="./assets/js/script.portifolio.js"> </script>
 
-    <link rel="shortcut icon" href="../assets/galeria.icon.png" type:"image/x-icon">
-    <link rel="stylesheet" href="../assets/css/style.portifolio.css">
+    <link rel="shortcut icon" href="./assets/galeria.icon.png" type:"image/x-icon">
+    <link rel="stylesheet" href="./assets/css/style.portifolio.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0">
     <!-- link para o css do menu mobile; link para o css do google fonts -->
@@ -39,7 +39,7 @@
         <article id="conteudo">
 
             <div class="jackzin">
-                <img src="../assets/jack_IA.png" alt="imagem representando o Jack, gerada por IA">
+                <img src="./assets/jack_IA.png" alt="imagem representando o Jack, gerada por IA">
             </div>
 
 
