--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@ DOCTYPE: Document Type Declaration-->
 
     <title>Apresentação Pessoal</title>
 
-    <link rel="shortcut icon" href="../assets/favicon.png" type:"image/x-icon">
-    <link rel="stylesheet" href="../assets/css/style.index.css">
+    <link rel="shortcut icon" href="./assets/favicon.png" type:"image/x-icon">
+    <link rel="stylesheet" href="./assets/css/style.index.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0">
     <!-- link para o css do menu mobile; link para o css do google fonts -->
