--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ DOCTYPE: Document Type Declaration-->
      “initial-scale=1.0” indica que a página deve ser exibida com uma esc
     -->
 
-    <script src="../assets/js/script.index.js"> </script>
+    <script src="./assets/js/script.index.js"> </script>
 
     <title>Apresentação Pessoal</title>
 
